Add cached avatar